kubernetes/dev/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
      - name: api-deployment
        image: jardesonbarbosa/hurb_challenge:1.0.7
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
