kubernetes/dev/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-deployment
  template:
    metadata:
      labels:
        app: mlflow-deployment
    spec:
      containers:
      - name: mlflow-deployment
        image: jardesonbarbosa/mlflow-server:1.0.2
        imagePullPolicy: Always
        args:
        - --host=0.0.0.0
        - --port=5000
        - --backend-store-uri=postgresql://mlflow_user:mlflow_pwd@10.97.122.91:5432/mlflow_db
        - --default-artifact-root=s3://mlflow/
        - --workers=2
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
