kubernetes/dev/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-minio-service
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: mlflow-minio
