kubernetes/dev/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
spec:
  rules:
  - host: api-server.local
    http:
      paths:
        - backend:
            service:
              name: api-service
              port:
                number: 8000
          path: /
          pathType: Prefix
